--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     border: 2px solid;
     border-color:rgb(252, 164, 0);
 }
-.bordure-verte{
+.bordure-rouge{
     border: 2px solid;
     border-color:rgb(255, 8, 8);
 }
